# stateless-discord-bot

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.example.toml  wrangler.toml
.github/workflows/: rust.yml  wrangler.yml
src/: context.rs  error.rs  http.rs  lib.rs
src/discord/: command.rs  interaction.rs  mod.rs  verification.rs
src/discord/command/: hello.rs  mod.rs
worker/: worker.js
