[package]
name = "stateless-discord-bot"
description = "An example of stateless Discord Bot using Slash Commands feature and Cloudflare Workers."
repository = "https://github.com/siketyan/stateless-discord-bot.git"
license = "MIT"
version = "0.1.0"
authors = ["Naoki Ikeguchi <root@siketyan.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
ed25519-dalek = "1.0.1"
hex = "0.4.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
serde_repr = "0.1.6"
thiserror = "1.0.22"
wasm-bindgen = { version = "=0.2.65", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
