[package]
name = "stateless-discord-bot"
description = "An example of stateless Discord Bot using Slash Commands feature and Cloudflare Workers."
repository = "https://github.com/siketyan/stateless-discord-bot.git"
license = "MIT"
version = "0.1.0"
authors = ["Naoki Ikeguchi <me@s6n.jp>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0"
ed25519-dalek = "1.0.1"
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
wasm-bindgen = { version = "=0.2.82", features = ["serde-serialize"] }
worker = "0.0.11"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
